# convx

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  documentation.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pr.yml  release.yml
docs/: explore.md  secrets.md
history/pascal/codex/: .2026-02-15-1055-can-you-check-the--sessions--folder-and-tell-me-how-we-can-w.json  .2026-02-15-1642-agents.md-instructions-for--users-pascal-code-business-convx.json  .2026-02-15-1642-can-you-check--history-codex-for-the-previous-conversation-w.json  2026-02-15-1055-can-you-check-the--sessions--folder-and-tell-me-how-we-can-w.md  2026-02-15-1642-agents.md-instructions-for--users-pascal-code-business-convx.md
history/pascal/cursor/: .2026-02-19-1726-hashing-secrets-in-python-library.json  .2026-02-19-1743-ai-session-extraction-from-cursor.json  .2026-02-19-1841-content-retro-porting-from-older-format.json  .2026-02-19-1848-git-hooks-for-conversation-sync.json  .2026-02-19-1848-reviewing-contents-of--convx-history--folder.json  .2026-02-19-1853-final-code-and-ux-review.json  .2026-02-19-1900-convx-cli-path-issue.json  (+17 more)
src/conversation_exporter/: __main__.py  cli.py  engine.py  models.py  render.py
src/convx_ai/: __main__.py  cli.py  config.py  engine.py  explore.css  redact.py  redact_patterns.py  render.py  sanitize.py  search.py  tui.py  utils.py
tests/: test_integration_claude.py  test_integration_gemini.py  test_integration_sync.py  test_redact.py  test_sanitize.py
tests/fixtures/: gemini_projects.json
(+32 files in other folders)
