[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "conversation-exporter"
version = "0.1.0"
description = "Idempotent conversation exporter for Codex and other AI systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
]

[project.scripts]
convx = "conversation_exporter.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
